--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Montserrat', Arial, sans-serif;
   background-color: #691717;
   color: #f0f0f0;
-  background-image: url("starry_sun.jpg");
+  background-image: url("pink.jpeg");
   background-size: cover;
   background-repeat: repeat-y;
   background-attachment: fixed;
