--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   font-family: 'Montserrat', Arial, sans-serif;
-  background-color: #691717;
+  background-color: #a78167;
   color: #f0f0f0;
   background-image: url("pink.jpeg");
   background-size: cover;
@@ -20,7 +20,7 @@ body {
    NAVBAR
 ========================= */
 .navbar {
-  background-color: rgba(57, 4, 4, 0.95);
+  background-color: #967e73;
   padding: 1em 2em;
   display: flex;
   justify-content: space-between;
@@ -62,7 +62,7 @@ body {
    CARDS
 ========================= */
 .resource-card {
-  background-color: rgba(57, 4, 4, 0.95);
+  background-color: #e0c1c6;
   margin: 2em auto;
   padding: 1.5em;
   border-radius: 12px;
