--- a/style.css
+++ b/style.css
@@ -199,3 +199,16 @@ footer {
     justify-content: center;
   }
 }
+
+img {
+     float: left;
+     width: 200px;
+     margin: 10px;
+     border-color: white;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 10px;
+  height: 250px;
+}
+body {background-color: #E9967A;
+}
