--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid #04041b;
+  border: 3px solid #ffffff;
   object-fit: cover;
 }
 
