--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   font-family: 'Montserrat', Arial, sans-serif;
   background-color: #a78167;
-  color: #f0f0f0;
+  color: #835F58;
   background-image: url("pink.jpeg");
   background-size: cover;
   background-repeat: repeat-y;
@@ -97,7 +97,7 @@ body {
 .bio-text h4 {
   margin-top: 0;
   font-weight: bold;
-  color: #fafafa;
+  color: #835F58;
 }
 
 /* =========================
@@ -127,13 +127,13 @@ body {
 
 .reflection h3 {
   margin-top: 0;
-  color: #ffffff;
+  color: #835F58;
   font-weight: bold;
 }
 
 .reflection p {
   font-size: 0.95em;
-  color: #ffffff;
+  color: #835F58;
   font-weight: bold;
 }
 
@@ -169,7 +169,7 @@ body {
 footer {
   text-align: center;
   font-size: 0.85em;
-  color: #ffffff;
+  color: #835F58;
   font-weight: bold;
 }
 
